Re-create stack with JHipster 8.1.0